[package]
name = "solana_vanity_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18.2"
rayon = "1.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
bs58 = "0.4"
dotenvy = "0.15"

# TLS adapter for DigitalOcean / Supabase Postgres
postgres-native-tls = "0.5"
native-tls = "0.2"

